# WordCharts

./: .clang-format  BigTestText.txt  CMakeLists.txt  README.md  SmallTestText.txt  TestText.txt
src/: BarChartModel.cpp  BarChartModel.hpp  FileWordParser.cpp  FileWordParser.hpp  FileWordStream.cpp  FileWordStream.hpp  FrequentWords.cpp  FrequentWords.hpp  WordData.cpp  WordData.hpp  WordFileCountModel.cpp  WordFileCountModel.hpp  WordFrequencyAnalyst.cpp  WordFrequencyAnalyst.hpp  WordFrequencyAnalystThread.cpp  WordFrequencyAnalystThread.hpp  WordFrequencyAnalystWorker.cpp  WordFrequencyAnalystWorker.hpp  WordStream.hpp  WordsCounter.cpp  WordsCounter.hpp  WordsFrequentProxy.cpp  WordsFrequentProxy.hpp  WordsGraph.qml  main.cpp  main.qml
src/Trees/: ModifiedPrefixTree.cpp  ModifiedPrefixTree.hpp
src/count_classes/: CountClass.hpp  CountPrefixTree.cpp  CountPrefixTree.hpp
src/proxy_models/: WordsFrequentProxy.cpp  WordsFrequentProxy.hpp
src/proxy_models/tests/: TestWordsFrequentProxy.cmake  TestWordsFrequentProxy.cpp  TestWordsFrequentProxy.hpp
src/util/: NumOfWordsConstant.hpp
src/word_streams/: FileWordStream.cpp  FileWordStream.hpp  WordStream.hpp
src/word_streams/tests/: TestFileWordStream.cmake  TestFileWordStream.cpp  TestFileWordStream.hpp
